# serializer version: 1
# name: test_card_changes[created]
  dict({
    'assigned_user_display_name': 'Alex',
    'assigned_user_id': 7,
    'board_id': 1,
    'card_id': 102,
    'card_type_emoji': '',
    'card_type_id': 20,
    'card_type_name': 'Task',
    'column_id': 10,
    'column_name': 'To do',
    'description': 'Check the soil first',
    'event_type': 'card_created',
    'external_url': 'https://example.com/plants',
    'old_column_id': None,
    'slick_id': 40,
    'slick_name': 'Summer',
    'sort_key': 'a0',
    'tag_names': list([
      'Home',
    ]),
    'title': 'Water the plants',
    'updated_at_utc': '2026-06-30T10:00:00Z',
  })
# ---
# name: test_card_changes[moved]
  dict({
    'assigned_user_display_name': 'Alex',
    'assigned_user_id': 7,
    'board_id': 1,
    'card_id': 101,
    'card_type_emoji': '',
    'card_type_id': 20,
    'card_type_name': 'Task',
    'column_id': 11,
    'column_name': 'Done',
    'description': 'Check the soil first',
    'event_type': 'card_moved',
    'external_url': 'https://example.com/plants',
    'old_column_id': 10,
    'slick_id': 40,
    'slick_name': 'Summer',
    'sort_key': 'a0',
    'tag_names': list([
      'Home',
    ]),
    'title': 'Water the plants',
    'updated_at_utc': '2026-06-30T10:00:00Z',
  })
# ---
# name: test_card_changes[removed]
  dict({
    'assigned_user_display_name': 'Alex',
    'assigned_user_id': 7,
    'board_id': 1,
    'card_id': 101,
    'card_type_emoji': '',
    'card_type_id': 20,
    'card_type_name': 'Task',
    'column_id': 10,
    'column_name': 'To do',
    'description': 'Check the soil first',
    'event_type': 'card_removed',
    'external_url': 'https://example.com/plants',
    'old_column_id': 10,
    'slick_id': 40,
    'slick_name': 'Summer',
    'sort_key': 'a0',
    'tag_names': list([
      'Home',
    ]),
    'title': 'Water the plants',
    'updated_at_utc': '2026-06-30T10:00:00Z',
  })
# ---
# name: test_card_changes[updated]
  dict({
    'assigned_user_display_name': 'Alex',
    'assigned_user_id': 7,
    'board_id': 1,
    'card_id': 101,
    'card_type_emoji': '',
    'card_type_id': 20,
    'card_type_name': 'Task',
    'column_id': 10,
    'column_name': 'To do',
    'description': 'Check the soil first',
    'event_type': 'card_updated',
    'external_url': 'https://example.com/plants',
    'old_column_id': 10,
    'slick_id': 40,
    'slick_name': 'Summer',
    'sort_key': 'a0',
    'tag_names': list([
      'Home',
    ]),
    'title': 'Updated task',
    'updated_at_utc': '2026-07-01T12:00:00Z',
  })
# ---
